--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 env:
 - DB=sqlite3
 script:
-- bundle exec rake --trace
+- travis_wait 30 bundle exec rake --trace
 deploy:
   provider: heroku
   api_key:
